<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tally Bars</string>

    <string name="group_add_button">Press this button to add a new group!</string>

    <string name="new_group_name"> <u>New Group Name</u></string>
    <string name="group_name_hint">Group Name</string>

    <string name="group_ok_button" tools:ignore="Typos">Ok</string>

    <string name="new_item_name"> <u>New Item Name</u></string>
    <string name="item_add_button">Press this button to add a new item!</string>
    <string name="item_name_hint">Item Name</string>

    <string name="R">R</string>
    <string name="G">G</string>
    <string name="B">B</string>


    <string name="toggle_button_total">To Total</string>
    <string name="toggle_button_balanced">To Balanced</string>

</resources>